Fixed background to position correctly on mobile

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -36,12 +36,34 @@ body {
 }
 
 #bg {
+    /*
     position: fixed;
     z-index: -9999;
     object-fit: cover;
     -o-object-fit: cover;
     width: 100vw;
     height: 100%;
+    */
+   
+       z-index: -9999;
+
+     /* Set rules to fill background */
+  min-height: 100%;
+  min-width: 1024px;
+    
+  /* Set up proportionate scaling */
+  width: 100%;
+  height: auto;
+    
+  /* Set up positioning */
+  position: fixed;
+  bottom: 0;
+}
+
+@media screen and (max-width: 1024px) { /* Specific to this particular image */
+  #bg {
+    left: 50%;
+  }
 }
 
 #sec-1 {
